...
    <string name="contact_new">New contact</string>
    <string name="add">Add</string>
    <string name="add_identity">Add new identity</string>
    <string name="Select">Select</string>

...

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="upload">Upload</string>
    <string name="Delete">Delete</string>
    <string name="Send">Send</string>
    <string name="folderListingUpdateError">Could not update the folder listing</string>
    <string name="Export">Export</string>
...
    <string name="confirm_delete_title">Delete?</string>
    <string name="confirm_delete_message">Do you want to delete %s?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="aborted">Aborted</string>
...
    <string name="create_folder">Create folder</string>
    <string name="headline_searchresult">Search result:</string>
    <string name="headline_files">File browser</string>
    <string name="filter">Filter</string>
    <string name="no_entrys_found">No files were found</string>
...

    <string name="headline_add_contact">Add contact</string>
    <string name="headline_add_identity">Add identity</string>
    <string name="headline_contacts">Contacts</string>
    <string name="headline_identities">Identities</string>
    <string name="headline_select_upload_folder">Select upload folder</string>
    <string name="create_identity_enter_name">Please enter a name for your identity. For example, \"Jana\" or \"Forum Troll\".</string>
    <string name="create_identity_enter_phone">Please enter a valid phone number, if you want to be found by other Qabel users. This phone number will be published on Qabel Index, the public contact directory for Qabel users. This is how you can be found. If you do not wish to be found, simply skip this step by clicking \"Next\". You can still add your phone number to your identity later.  We will
    <string name="create_identity_enter_email">Please enter a valid e-mail address if you want to be found by others Qabel users. This e-mail address will be published on Qabel Index, the public contact directory for Qabel users. This is how you can be found. If you do not wish to be found, simply skip this step by clicking \"Next\". You can still add your e-mail address to your identity later.  W
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="create_identity_successful">Identity created</string>
    <string name="dialog_headline_info">Information</string>
    <string name="create_identity_enter_all_data">Please fill in all fields</string>
    <string name="finish">Finish</string>
    <string name="create_identity_enter_name_hint">Alias of your identity</string>
    <string name="create_identity_create">Create a new identity</string>
    <string name="create_identity_import">Import an identity</string>
    <string name="function_not_yet_implenented">Function not yet implemented</string>
...
    <string name="create_account_password2_hint">Repeat the password</string>
    <string name="create_account_password_infos">Please enter your password</string>
    <string name="create_box_account">Register a Qabel account</string>
    <string name="login">Login</string>
    <string name="loggedInAs">Logged in as %s</string>
...
    <string name="email_address_invalid">Your email address is invalid. Please check it and try it again.</string>
    <string name="phone_number_invalid">Your phone number is invalid. Please check it and try again.</string>
    <string name="btn_create_identity">Create identity</string>
    <string name="create_account_final_headline">Qabel account registered</string>
    <string name="change_account_password_oldpassword_hint">Current password</string>
    <string name="change_account_password_newpassword1_hint">Password</string>
...
    <string name="share_subject">Qabel</string>
    <string name="share_text">Qabel Box</string>
    <string name="share_via">Share via</string>
    <string name="chooser_open_with">Open with</string>
    <string name="add_new_contact">Add new contact</string>
...
    <string name="share_into_app_select_identity">Please select the identity you want to use for the upload</string>
    <string name="share_into_app_canceled">The upload  was canceled</string>
    <string name="share_to_contact_message">Please select a contact with which you want to share this file</string>
    <string name="share_into_app_select_folder">Please select folder in which you want to upload the files</string>
    <string name="headline_share_select_upload_identity">Select upload identity</string>
...
    <string name="send_message_as">Send message as %s</string>

    <string name="ShareToQabelUser">Share</string>
    <string name="fileshare_label_in_chatmessage">Shared file %1</string>
    <string name="headline_share_to_qabeluser">Share to QabelUser</string>
    <string name="accept_share">Accept share</string>
    <string name="cant_share_contactlist_is_empty">Can\'t share file. You have no contact in contactlist</string>
    <string name="share_only_files_possibility">Only files can be shared</string>
    <string name="dialog_share_sending_in_progress">File is uploading for sharing</string>
    <string name="messsage_file_shared">File successfully shared</string>
    <string name="cant_import_shared_file">Can\'t import shared file</string>
    <string name="shared_file_imported">Shared file imported</string>
...
    <string name="search">Search</string>
    <string name="inbox">Inbox</string>
    <string name="qapl" translatable="false">QaPL</string>
    <string name="upload_failed_title">Could not open the file</string>
    <string name="filebrowser_up">Navigate up</string>
...
