<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/activity_horizontal_margin">

    <de.qabel.qabelbox.ui.views.TextViewFont
        style="@style/MessageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_to_contact_message"/>

    <Spinner
        android:id="@+id/spinner_identities"
        style="@style/Spinner"
        android:paddingTop="10dp"
        android:paddingLeft="0dp"
        android:layout_marginLeft="0dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
